# document-intelligence-extraction-system

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  sample_document.json
docs/: adr-001-extraction-service-metadata.md
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/doc_intelligence/: __init__.py  api.py  audit.py  classifier.py  cli.py  config.py  extractor.py  schemas.py  service.py  text_utils.py
tests/: test_api.py  test_extractor.py  test_service.py  test_service_metadata.py
